@@ -901,8 +901,9 @@ void SetupICC::slotShowDefaultSearchPaths()
 
     QString text = i18n("On Windows, the default search paths include "
                         "<ul>"
-                        "<li>%1/Windows/Spool/Drivers/Color/</li>"   // For Win2K and WinXP
-                        "<li>%2/Windows/Color/</li>"                 // For Win98 and WinMe
+                        "<li>%1/Windows/System32/spool/drivers/color/</li>"   // For Win10 and Win7
+                        "<li>%1/Windows/Spool/Drivers/Color/</li>"            // For Win2K and WinXP
+                        "<li>%2/Windows/Color/</li>"                          // For Win98 and WinMe
                         "</ul>"
                         "On your system, currently these paths exist and are scanned:"
                         "<ul>"
